// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TopicsLine matches last snapshot 1`] = `
<div
  className="topicsLine text-button newLineForTopics"
>
  <Link
    className="topic text-button"
    key="one"
    replace={false}
    to="/c/hay/one"
  >
    #
    one
  </Link>
  <Link
    className="topic text-button"
    key="two"
    replace={false}
    to="/c/hay/two"
  >
    #
    two
  </Link>
</div>
`;

exports[`matches announcement snapshot 1`] = `
<div
  className="header"
>
  <div
    className="headerMainRow"
  >
    <Avatar
      avatarUrl="foo.png"
      className="avatar"
      url="/m/123"
    />
    <div
      className="headerText"
    >
      <Highlight
        component="span"
        highlightClassName="highlight"
      >
        <Link
          className="userName"
          replace={false}
          to="/m/123"
        >
          JJ
        </Link>
      </Highlight>
      <div
        className="timestampRow"
      >
        <span
          className="timestamp timestamp"
        />
        <span
          className="announcementSection"
        >
          <span
            className="announcementSpacer timestamp"
          >
            •
          </span>
          <span
            data-for="announcement-tt"
            data-tip="Announcement"
          >
            <Icon
              className="announcementIcon"
              name="Announcement"
            />
          </span>
          <ReactTooltip
            clickable={false}
            delayShow={550}
            effect="solid"
            id="announcement-tt"
            insecure={true}
            resizeHide={true}
            wrapper="div"
          />
        </span>
      </div>
    </div>
    <div
      className="upperRight"
    />
  </div>
</div>
`;

exports[`matches announcement snapshot 2`] = `
<div
  className="header"
>
  <div
    className="headerMainRow"
  >
    <Avatar
      avatarUrl="foo.png"
      className="avatar"
      url="/m/123"
    />
    <div
      className="headerText"
    >
      <Highlight
        component="span"
        highlightClassName="highlight"
      >
        <Link
          className="userName"
          replace={false}
          to="/m/123"
        >
          JJ
        </Link>
      </Highlight>
      <div
        className="timestampRow"
      >
        <span
          className="timestamp timestamp"
        />
        <span
          className="announcementSection"
        >
          <span
            className="announcementSpacer timestamp"
          >
            •
          </span>
          <span
            data-for="announcement-tt"
            data-tip="Announcement"
          >
            <Icon
              className="announcementIcon"
              name="Announcement"
            />
          </span>
          <ReactTooltip
            clickable={false}
            delayShow={550}
            effect="solid"
            id="announcement-tt"
            insecure={true}
            resizeHide={true}
            wrapper="div"
          />
        </span>
      </div>
    </div>
    <div
      className="upperRight"
    >
      <PostLabel
        className="label"
        type="request"
      />
    </div>
  </div>
</div>
`;

exports[`matches announcement snapshot 3`] = `
<div
  className="header"
>
  <div
    className="headerMainRow"
  >
    <Avatar
      avatarUrl="foo.png"
      className="avatar"
      url="/m/123"
    />
    <div
      className="headerText"
    >
      <Highlight
        component="span"
        highlightClassName="highlight"
      >
        <Link
          className="userName"
          replace={false}
          to="/m/123"
        >
          JJ
        </Link>
      </Highlight>
      <div
        className="timestampRow"
      >
        <span
          className="timestamp timestamp"
        />
        <span
          className="announcementSection"
        >
          <span
            className="announcementSpacer timestamp"
          >
            •
          </span>
          <span
            data-for="announcement-tt"
            data-tip="Announcement"
          >
            <Icon
              className="announcementIcon"
              name="Announcement"
            />
          </span>
          <ReactTooltip
            clickable={false}
            delayShow={550}
            effect="solid"
            id="announcement-tt"
            insecure={true}
            resizeHide={true}
            wrapper="div"
          />
        </span>
      </div>
    </div>
    <div
      className="upperRight"
    >
      <PostLabel
        className="label"
        type="request"
      />
      <Dropdown
        items={
          Array [
            Object {
              "icon": "Edit",
              "label": "Edit",
              "onClick": [Function],
            },
            Object {
              "icon": "Trash",
              "label": "Delete",
              "onClick": [Function],
              "red": true,
            },
          ]
        }
        toggleChildren={
          <Icon
            name="More"
          />
        }
      />
    </div>
  </div>
</div>
`;

exports[`matches snapshot 1`] = `
<div
  className="header"
>
  <div
    className="headerMainRow"
  >
    <Avatar
      avatarUrl="foo.png"
      className="avatar"
      url="/m/123"
    />
    <div
      className="headerText"
    >
      <Highlight
        component="span"
        highlightClassName="highlight"
      >
        <Link
          className="userName"
          replace={false}
          to="/m/123"
        >
          JJ
        </Link>
      </Highlight>
      <div
        className="timestampRow"
      >
        <span
          className="timestamp timestamp"
        />
      </div>
    </div>
    <div
      className="upperRight"
    />
  </div>
</div>
`;

exports[`matches snapshot 2`] = `
<div
  className="header"
>
  <div
    className="headerMainRow"
  >
    <Avatar
      avatarUrl="foo.png"
      className="avatar"
      url="/m/123"
    />
    <div
      className="headerText"
    >
      <Highlight
        component="span"
        highlightClassName="highlight"
      >
        <Link
          className="userName"
          replace={false}
          to="/m/123"
        >
          JJ
        </Link>
      </Highlight>
      <div
        className="timestampRow"
      >
        <span
          className="timestamp timestamp"
        />
      </div>
    </div>
    <div
      className="upperRight"
    >
      <PostLabel
        className="label"
        type="request"
      />
    </div>
  </div>
</div>
`;

exports[`matches snapshot 3`] = `
<div
  className="header"
>
  <div
    className="headerMainRow"
  >
    <Avatar
      avatarUrl="foo.png"
      className="avatar"
      url="/m/123"
    />
    <div
      className="headerText"
    >
      <Highlight
        component="span"
        highlightClassName="highlight"
      >
        <Link
          className="userName"
          replace={false}
          to="/m/123"
        >
          JJ
        </Link>
      </Highlight>
      <div
        className="timestampRow"
      >
        <span
          className="timestamp timestamp"
        />
      </div>
    </div>
    <div
      className="upperRight"
    >
      <PostLabel
        className="label"
        type="request"
      />
      <Dropdown
        items={
          Array [
            Object {
              "icon": "Edit",
              "label": "Edit",
              "onClick": [Function],
            },
            Object {
              "icon": "Trash",
              "label": "Delete",
              "onClick": [Function],
              "red": true,
            },
          ]
        }
        toggleChildren={
          <Icon
            name="More"
          />
        }
      />
    </div>
  </div>
</div>
`;
